# rototiller

./: .gitignore  .gitmodules  HACKING.txt  Makefile  Makefile.am  README  README.historic  TODO  configure.ac  drmsetup.c  drmsetup.h  fb.c  fb.h  rototiller.c  rototiller32.c  rototiller64.c  util.c  util.h
modules/: Makefile.am
modules/ray/: ray.c  ray.h  ray_camera.h  ray_color.h  ray_object.c  ray_object.h  ray_object_light.h  ray_object_plane.h  ray_object_point.h  ray_object_sphere.h  ray_ray.h  ray_scene.h  ray_threads.c  ray_threads.h
modules/roto/: Makefile.am  roto.c
modules/sparkler/: bsp.c  chunker.c  chunker.h  container.h  list.h  particles.c  particles.h  rocket.c  sparkler.c
modules/stars/: draw.h  stars.h  starslib.c
src/: Makefile.am  drm_fb.c  drm_fb.h  drmsetup.c  fb.c  fb.h  fps.c  fps.h  knobs.h  main.c  mem_audio.c  mem_fb.c  rototiller.c  rototiller.h  sdl_audio.c  sdl_fb.c  sdl_fb.h  settings.c  settings.h  setup.c  setup.h  threads.c  threads.h  til.c  til.h  til_args.c  til_args.h  til_audio.c  til_audio.h  til_audio_context.c  til_audio_context.h  til_builtins.c  til_fb.c  til_fb.h  til_jenkins.c  til_jenkins.h  til_knobs.h  til_limits.h  til_module_context.c  til_module_context.h  (+17 more)
src/libs/: Makefile.am
src/libs/ascii/: Makefile.am  ascii.c  ascii.h
src/libs/din/: Makefile.am  din.c  din.h  v3f.h
src/libs/grid/: Makefile.am  grid.c  grid.h  macros.h
src/libs/puddle/: Makefile.am  puddle.c  puddle.h
src/libs/ray/: Makefile.am  ray_3f.h  ray_camera.c  ray_camera.h  ray_euler.h  ray_gamma.c  ray_gamma.h  ray_light_emitter.h  ray_object_light.h  ray_object_sphere.h  ray_object_type.h  ray_render.c  ray_render.h  ray_render_object.h  ray_render_object_point.h  ray_scene.h  ray_surface.h
src/libs/rocket/: Makefile.am
src/libs/sig/: Makefile.am  ops_abs.c  ops_add.c  ops_ceil.c  ops_clamp.c  ops_const.c  ops_div.c  ops_expand.c  ops_floor.c  ops_inv.c  ops_lerp.c  ops_max.c  ops_min.c  ops_mult.c  ops_neg.c  ops_pow.c  ops_rand.c  ops_round.c  ops_scale.c  ops_sin.c  ops_sub.c  sig.c  sig.h
src/libs/txt/: Makefile.am  txt.c  txt.h
src/modules/: Makefile.am
src/modules/asc/: Makefile.am  asc.c
src/modules/blinds/: Makefile.am  blinds.c
src/modules/book/: Makefile.am  book.c
src/modules/checkers/: Makefile.am  checkers.c
src/modules/compose/: Makefile.am  compose.c
src/modules/drizzle/: Makefile.am  drizzle.c
src/modules/droste/: Makefile.am  droste.c
src/modules/flow/: Makefile.am  ff.c  ff.h  flow.c  v3f.h
src/modules/flui2d/: Makefile.am  flui2d.c
src/modules/julia/: Makefile.am  julia.c
src/modules/meta2d/: Makefile.am  meta2d.c  v2f.h  v3f.h
src/modules/mixer/: Makefile.am  mixer.c
src/modules/moire/: Makefile.am  moire.c
src/modules/montage/: Makefile.am  montage.c
src/modules/pan/: Makefile.am  pan.c
src/modules/pixbounce/: Makefile.am  pixbounce.c
src/modules/plasma/: Makefile.am  plasma.c
src/modules/plato/: Makefile.am  plato.c
src/modules/playit/: Makefile.am  playit.c
src/modules/ray/: Makefile.am  ray.c  ray_3f.h  ray_camera.c  ray_camera.h  ray_euler.c  ray_euler.h  ray_light_emitter.h  ray_object.c  ray_object.h  ray_object_light.h  ray_object_plane.h  ray_object_point.h  ray_object_sphere.h  ray_object_type.h  ray_render.c  ray_render.h  ray_render_object.h  ray_render_object_plane.h  ray_render_object_point.h  ray_render_object_sphere.h  ray_scene.c  ray_scene.h  ray_surface.h
src/modules/rkt/: Makefile.am  rkt.c  rkt.h  rkt_scener.c  rkt_scener.h
src/modules/rocket/: Makefile.am  rocket.c
src/modules/roto/: Makefile.am  roto.c  roto.h
src/modules/rtv/: Makefile.am  rtv.c
src/modules/shapes/: Makefile.am  shapes.c
src/modules/signals/: Makefile.am  signals.c
src/modules/snow/: Makefile.am  snow.c
src/modules/sparkler/: Makefile.am  bsp.c  bsp.h  burst.c  burst.h  burst_params.def  chunker.c  draw.h  helpers.h  list.h  params_def.def  params_undef.def  particle.c  particle.h  particles.c  particles.h  rocket.c  simple.c  spark.c  sparkler.c  sparkler.h  v3f.h  xplode.c  xplode.h  xplode_params.def
src/modules/spiro/: Makefile.am  spiro.c
src/modules/spokes/: Makefile.am  spokes.c
src/modules/stars/: Makefile.am  draw.h  stars.c
src/modules/strobe/: Makefile.am  strobe.c
src/modules/stub/: Makefile.am  stub.c
src/modules/submit/: Makefile.am  submit.c
src/modules/swab/: Makefile.am  swab.c
src/modules/swarm/: Makefile.am  swarm.c
src/modules/voronoi/: Makefile.am  v2f.h  voronoi.c
