SUBDIRS =			\
		asc		\
		blinds		\
		book		\
		checkers	\
		compose		\
		drizzle		\
		flow		\
		flui2d		\
		julia		\
		meta2d		\
		mixer		\
		moire		\
		montage		\
		pan		\
		pixbounce	\
		plasma		\
		plato		\
		playit		\
		ray		\
		rkt		\
		roto		\
		rtv		\
		shapes		\
		signals		\
		snow		\
		sparkler	\
		spiro		\
		spokes		\
		stars		\
		strobe		\
		stub		\
		submit		\
		swab		\
		swarm		\
		voronoi
