noinst_LTLIBRARIES = libray.la
libray_la_SOURCES = ray_3f.h ray_camera.c ray_camera.h ray_color.h ray_euler.c ray_euler.h ray_gamma.c ray_gamma.h ray_light_emitter.h ray_object.h ray_object_light.h ray_object_plane.h ray_object_point.h ray_object_sphere.h ray_object_type.h ray_ray.h ray_render.c ray_render.h ray_render_object.h ray_render_object_plane.h ray_render_object_point.h ray_render_object_sphere.h ray_scene.h ray_surface.h
libray_la_CFLAGS = -ffast-math
libray_la_CPPFLAGS = -I@top_srcdir@/src
