noinst_LIBRARIES = libsparkler.a
libsparkler_a_SOURCES = bsp.c bsp.h burst.c chunker.c chunker.h container.h list.h particle.c particle.h particles.c particles.h rocket.c simple.c spark.c sparkler.c v3f.h xplode.c
libsparkler_a_CFLAGS = @ROTOTILLER_CFLAGS@ -ffast-math
libsparkler_a_CPPFLAGS = @ROTOTILLER_CFLAGS@ -I@top_srcdir@/src
